---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 21/11/25
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21/11/25
  Major Features:
    - Added item buffs to most items, unlocked and upgraded in the Catalog.
        Unlocking and enhancement difficulty is configurable with two new settings, "Item Buff Cost Scale" and "Item Buff Cost Base".
    - Added command /set-item-value so that you can get modded items to show up in random trades, the catalog, and be able to use them in /add-trade.
        Also added complementary commands: /import-item-values /export-item-values /remove-item-value /get-item-value
    - Added Fulgora quest to unlock free roboports ("Hexports") built into hex cores that require no power.
  Features:
    - Added command /regenerate-trades so that you can regenerate the trades in your current hexes with newly loaded item values for mods.
        Don't forget about /add-trade and /remove-trade for maximum control of a new playthrough!
    - Added command parameter aliases: in-hand, here
        in-hand: This parameter takes the value of whatever item you're holding.
        here: This parameter takes the value of whatever planet your character is currently on.
        Useful for when setting values for modded items but you don't know what the hyphenated names are:
        /set-item-value in-hand 100 here
  Minor Features:
    - Added two mod settings, "Default Trade Quality" and "Increment Trade Quality", to control how trade quality bounds are initialized or managed.
    - Added an early quest to inform new players of the mod that trade arrow tooltips give important information.
  Sounds:
    - Swapped vanilla title screen music with piano.  Can be disabled in the mod startup settings.
  Changes:
    - Mod is now properly marked as a "Space Age Mod" in the mod browser.