@@ -239,6 +239,7 @@ hextorio-default-trade-quality=Default Trade Quality
 hextorio-item-buff-cost-scale=Item Buff Cost Scale
 hextorio-item-buff-cost-base=Item Buff Cost Base
 hextorio-title-screen-music=Title Screen Music
+hextorio-trade-flying-text=Trade Flying Text
 
 [mod-setting-description]
 hextorio-claimed-hex-tile=The tile used to pave over claimed hexes.
@@ -358,6 +359,7 @@ hextorio-increment-trade-quality=Upon upgrading a hex core's quality, automatica
 hextorio-default-trade-quality=Upon claiming a hex core, the quality bounds for each trade are set to this range of values. All quality bounds are [color=green]configurable[.color] regardless of this setting's value.
 hextorio-item-buff-cost-scale=The multiplier of the item's value that is used as the cost for unlocking that item's buffs in the catalog.
 hextorio-item-buff-cost-base=The base of exponentiation used to scale the value beyond the unlock cost to obtain the enhancement cost of an item's buffs.\n\nSmall changes to this number from the default value strongly affects the balancing of the game.
+hextorio-trade-flying-text=Whether to emit flying text for a trade that just completed.
 
 [string-mod-setting]
 hextorio-grid-rotation-mode-nauvis-random=Random
@@ -588,6 +590,7 @@ new-item-value-set=The value of [item=__1__] on [planet=__2__] is now __3__.
 removed-value=Removed value for [item=__1__] on [planet=__2__].
 removed-all-values=Removed value for [item=__1__] on all planets.
 item-values-imported=Item values successfully imported.
+negative-productivity=(NEGATIVE PRODUCTIVITY)
 
 [command-help]
 hextorio-commands=List all commands added by Hextorio.
