@@ -16,6 +16,13 @@ data:extend({
         default_value = 0.01,
         order = "zzy",
     },
+    {
+        type = "bool-setting",
+        setting_type = "runtime-per-user",
+        name = "hextorio-trade-flying-text",
+        default_value = true,
+        order = "z",
+    },
 
     {
         type = "bool-setting",
